--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>yo</title>
+    <link href="main.css" rel="stylesheet">
   </head>
   <body>
     <p>dang, this website is <em>sexy</em></p>
