--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>yo</title>
     <link href="main.css" rel="stylesheet">
+    <script href="main.js"/>
   </head>
   <body>
     <p>dang, this website is <em>sexy</em></p>
