--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>yo</title>
     <link href="main.css" rel="stylesheet">
-    <script href="main.js"/>
+    <script src="main.js"></script>
   </head>
   <body>
     <p>dang, this website is <em>sexy</em></p>
