--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <p>dang, this website is <em>sexy</em></p>
     <img src="https://s-media-cache-ak0.pinimg.com/236x/4a/22/ab/4a22ab0e593603475984f109b8b0c6f1.jpg">
+    <img src="http://i.imgur.com/tc28w46.gif">
+    <p>360 noscoped ya m8</p>
   </body>
 </html>
