--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>yo</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css">
     <script src="main.js"></script>
   </head>
   <body>
@@ -10,7 +11,13 @@
     <img src="https://s-media-cache-ak0.pinimg.com/236x/4a/22/ab/4a22ab0e593603475984f109b8b0c6f1.jpg">
     <img src="http://i.imgur.com/tc28w46.gif">
     <p>360 noscoped ya m8</p>
+    <pre class="language-python">
+      <code class="language-python line-numbers-row">
+        print('yo wattup')
+      </code>
+    </pre>
     <img src="https://38.media.tumblr.com/83b1abdd37a272c76d5a50b31a91b3b5/tumblr_mu0i4hw4UE1s837teo7_500.gif">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script>
     <p>2spooky4me</p>
   </body>
 </html>
