--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>yo</title>
     <link href="main.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css" rel="stylesheet">
     <script src="main.js"></script>
   </head>
   <body>
