--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="main.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css" rel="stylesheet">
     <script src="main.js"></script>
+    <link href="solarized-dark.css" rel="stylesheet">
   </head>
   <body>
     <p>dang, this website is <em>sexy</em></p>
